# StudyOfMarkovGraphs

./: .gitignore  CMakeLists.txt  README.md  fiche_auto_evaluation_completed_EN.xlsx  github_repo.txt
TI_301_PRJ_STUDENTS-master/: CMakeLists.txt  cell.c  cell.h  characteristics.c  characteristics.h  graph.c  graph.h  hasse.c  hasse.h  list.c  list.h  main.c  matrix.c  matrix.h  mermaid.c  mermaid.h  stack.h  tarjan.c  tarjan.h  utils.c
TI_301_PRJ_STUDENTS-master/Mermaid Graph/: graph.c  graph.h  mermaid.c  mermaid.h
TI_301_PRJ_STUDENTS-master/Tarjan Algorithm/: stack.c  stack.h  tarjan.c  tarjan.h  tarjan_algo.c  tarjan_algo.h
TI_301_PRJ_STUDENTS-master/data/: part2_graph.txt
